# Covenant-Tracking

./: README.md  generate_covenant_flow_pdf_reportlab.py  pyproject.toml  report.md
Loan Agreements and Financial Data/: BRW1001-apex-traders-normalized.xlsx  BRW1002-bluecart-retail-normalized.xlsx  BRW1003-crescent-foods-normalized.xlsx  BRW1004-delta-machines-normalized.xlsx  BRW1005-evergreen-textiles-normalized.xlsx
covenanttrackingphase1.2/: pyproject.toml  pyproject.toml.test  run_covenant.sh
covenanttrackingphase1.2/src/covenanttrackingphase1/: main.py  web.py
covenanttrackingphase1.2/src/covenanttrackingphase1/config/: agents.yaml  skills.md  tasks.yaml
covenanttrackingphase1.2/src/covenanttrackingphase1/tools/: custom_tool.py
src/covenanttrackingphase1/: __main__.py  crew.py  main.py  sample_input copy.numbers  sample_input copy.xlsx  sample_input.numbers  sample_input1.xlsx  web.py
src/covenanttrackingphase1/config/: tasks.yaml
src/covenanttrackingphase1/tools/: __init__.py  covenant_tools.py  custom_tool.py
