[project]
name = "covenanttrackingphase1"
version = "0.1.0"
description = "CovenantTrackingPhase1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.13.0",
    "fastapi>=0.115.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.10.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
covenanttrackingphase1 = "covenanttrackingphase1.main:run"
run_crew = "covenanttrackingphase1.main:run"
run_crew_agents = "covenanttrackingphase1.main:run_with_agents"
train = "covenanttrackingphase1.main:train"
replay = "covenanttrackingphase1.main:replay"
test = "covenanttrackingphase1.main:test"
run_with_trigger = "covenanttrackingphase1.main:run_with_trigger"
covenant_web = "covenanttrackingphase1.web:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/covenanttrackingphase1"]

[tool.crewai]
type = "crew"
